feat: add Facebook and Apple social login
