# modules/auth/dto.go
@@ -10,3 +10,9 @@ type LoginRequest struct {
 	Email    string `json:"email" binding:"required,email"`
 	Password string `json:"password" binding:"required"`
 }
+
+type SocialLoginRequest struct {
+	Provider string `json:"provider" binding:"required,oneof=google facebook apple"`
+	Token    string `json:"token"`
+	IDToken  string `json:"id_token"`
+}
